--- a/tf-2-workflow.ipynb
+++ b/tf-2-workflow.ipynb
@@ -25,7 +25,7 @@
     "    4. [워크플로우 가시화](#VisualizingWorkflow)\n",
     "    5. [파이프라인의 생성과 실행 ](#CreatingExecutingPipeline)\n",
     "    6. [리소스 정리](#Cleanup)\n",
-    "9. [Extensions](#Extensions)\n",
+    "9. [확장](#Extensions)\n",
     "\n",
     "    \n",
     "## 시작하기 <a class=\"anchor\" id=\"Introduction\">\n",
