--- a/tf-2-workflow.ipynb
+++ b/tf-2-workflow.ipynb
@@ -106,13 +106,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%%writefile preprocessing.py\n",
     "\n",
+    "<br> \n",
+    "\n",
+    "### TO DO\n",
+    "<span style=\"color:red\"><b>힌트를 참고하여 아래 셀에서 TO DO를 완성합니다.</b></span>\n",
+    "\n",
+    "<details>\n",
+    "    <summary>힌트</summary>\n",
+    "    \n",
+    "```python\n",
     "import glob\n",
     "import numpy as np\n",
     "import os\n",
@@ -132,6 +138,64 @@
     "            print('SAVED TRANSFORMED TRAINING DATA FILE\\n')\n",
     "        else:\n",
     "            output_path = os.path.join('/opt/ml/processing/test', 'x_test.npy')\n",
+    "            np.save(output_path, transformed)\n",
+    "            print('SAVED TRANSFORMED TEST DATA FILE\\n')\n",
+    "```\n",
+    "</details>\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile preprocessing.py\n",
+    "\n",
+    "import glob\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    \n",
+    "    # ----------------------------------------------------------------------\n",
+    "    # TO DO : 입력파일을 로드 경로를 지정합니다..\n",
+    "    # input_files = glob.glob('{}/*.npy'.format('/opt/ml/processing/input'))\n",
+    "    \n",
+    "    input_files = <TO DO>\n",
+    "    \n",
+    "    # ----------------------------------------------------------------------\n",
+    "       \n",
+    "    print('\\nINPUT FILE LIST: \\n{}\\n'.format(input_files))\n",
+    "    scaler = StandardScaler()\n",
+    "    for file in input_files:\n",
+    "        raw = np.load(file)\n",
+    "        transformed = scaler.fit_transform(raw)\n",
+    "        \n",
+    "        if 'train' in file:\n",
+    "    \n",
+    "            # ----------------------------------------------------------------------     \n",
+    "            # TO DO : 출력파일이 저장될 경로를 지정합니다.\n",
+    "            # output_path = os.path.join('/opt/ml/processing/train', 'x_train.npy')\n",
+    "            \n",
+    "            output_path = <TO DO>\n",
+    "            \n",
+    "            # ----------------------------------------------------------------------       \n",
+    "            \n",
+    "            np.save(output_path, transformed)\n",
+    "            print('SAVED TRANSFORMED TRAINING DATA FILE\\n')\n",
+    "        else:\n",
+    "            \n",
+    "            # ----------------------------------------------------------------------       \n",
+    "            # TO DO : 출력파일이 저장될 경로를 지정합니다.\n",
+    "            # output_path = os.path.join('/opt/ml/processing/test', 'x_test.npy')\n",
+    "            \n",
+    "            output_path = <TO DO>\n",
+    "            \n",
+    "            # ----------------------------------------------------------------------\n",
+    "            \n",
     "            np.save(output_path, transformed)\n",
     "            print('SAVED TRANSFORMED TEST DATA FILE\\n')"
    ]
@@ -248,6 +312,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<br> \n",
+    "\n",
+    "### TO DO\n",
+    "<span style=\"color:red\"><b>train_model 디렉토리에 있는 train.py 파일을 열고 아래 힌트를 참고하여 TO DO를 완성합니다.</b></span>\n",
+    "\n",
+    "<details>\n",
+    "    <summary>힌트</summary>\n",
+    "    \n",
+    "```python\n",
+    "import argparse\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "from model_def import get_model\n",
+    "\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
+    "\n",
+    "\n",
+    "def parse_args():\n",
+    "    \n",
+    "    parser = argparse.ArgumentParser()\n",
+    "\n",
+    "    # 사용자가 전달한 하이퍼 파라미터를 command-line argument로 전달받아 사용함\n",
+    "    parser.add_argument('--epochs', type=int, default=1)\n",
+    "    parser.add_argument('--batch_size', type=int, default=64)\n",
+    "    parser.add_argument('--learning_rate', type=float, default=0.1)\n",
+    "    \n",
+    "    # data directories\n",
+    "    parser.add_argument('--train', type=str, default=os.environ.get('SM_CHANNEL_TRAIN'))\n",
+    "    parser.add_argument('--test', type=str, default=os.environ.get('SM_CHANNEL_TEST'))\n",
+    "    \n",
+    "    # model directory: we will use the default set by SageMaker, /opt/ml/model\n",
+    "    parser.add_argument('--model_dir', type=str, default=os.environ.get('SM_MODEL_DIR'))\n",
+    "    \n",
+    "    return parser.parse_known_args()\n",
+    "\n",
+    "\n",
+    "def get_train_data(train_dir):\n",
+    "    \n",
+    "    x_train = np.load(os.path.join(train_dir, 'x_train.npy'))\n",
+    "    y_train = np.load(os.path.join(train_dir, 'y_train.npy'))\n",
+    "    print('x train', x_train.shape,'y train', y_train.shape)\n",
+    "\n",
+    "    return x_train, y_train\n",
+    "\n",
+    "\n",
+    "def get_test_data(test_dir):\n",
+    "    \n",
+    "    x_test = np.load(os.path.join(test_dir, 'x_test.npy'))\n",
+    "    y_test = np.load(os.path.join(test_dir, 'y_test.npy'))\n",
+    "    print('x test', x_test.shape,'y test', y_test.shape)\n",
+    "\n",
+    "    return x_test, y_test\n",
+    "   \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    # 환경변수 또는 사용자 지정 hyperparameter로 전달된 argument를 읽는다.\n",
+    "    args, _ = parse_args()\n",
+    "    \n",
+    "    # training data를 가져온다. 위 코드에서 읽은 argument 중 'train'으로 전달된 값을 사용함. \n",
+    "    # parse_args()를 통해 환경변수 'SM_CHANNEL_TRAIN'로 전달된 경로 'opt/ml/input/train/'가 'arg.train'으로 지정됨\n",
+    "    x_train, y_train = get_train_data(args.train)\n",
+    "    x_test, y_test = get_test_data(args.test)\n",
+    "    \n",
+    "    device = '/cpu:0' \n",
+    "    print(device)\n",
+    "    batch_size = args.batch_size\n",
+    "    epochs = args.epochs\n",
+    "    learning_rate = args.learning_rate\n",
+    "    print('batch_size = {}, epochs = {}, learning rate = {}'.format(batch_size, epochs, learning_rate))\n",
+    "\n",
+    "    with tf.device(device):\n",
+    "        \n",
+    "        model = get_model()\n",
+    "        optimizer = tf.keras.optimizers.SGD(learning_rate)\n",
+    "        model.compile(optimizer=optimizer, loss='mse')    \n",
+    "        model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs,\n",
+    "                  validation_data=(x_test, y_test))\n",
+    "\n",
+    "        # evaluate on test set\n",
+    "        scores = model.evaluate(x_test, y_test, batch_size, verbose=2)\n",
+    "        print(\"\\nTest MSE :\", scores)\n",
+    "                \n",
+    "        # 결과모델 저장 - 'args.model_dir'에는 'SM_MODEL_DIR' 환경변수를 통해 지정된 '/opt/ml/model/' 경로가 지정된다.\n",
+    "        model.save(args.model_dir + '/1')\n",
+    "    \n",
+    "```\n",
+    "</details>\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pygmentize train_model/train.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -331,18 +502,7 @@
     "algo-1-49mn2_1  | SM_HP_LEARNING_RATE=0.01\n",
     "algo-1-49mn2_1  | SM_HP_MODEL_DIR=/opt/ml/model\n",
     "...\n",
-    "```\n",
-    "\n",
-    "해당 내용을 확인한 후 다음 셀을 실행하여 train.py 코드를 확인합니다.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pygmentize train_model/train.py"
+    "```\n"
    ]
   },
   {
@@ -1103,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
