--- a/tf-2-workflow.ipynb
+++ b/tf-2-workflow.ipynb
@@ -7,7 +7,8 @@
     "## TensorFlow 2 프로젝트 워크플로우를 SageMaker에서 실행하기\n",
     "\n",
     "- **본 노트북은 SageMaker example 중 tf-2-workflow부분 한글 번역입니다.**\n",
-    "- 원본소스 : https://github.com/aws-samples/amazon-sagemaker-script-mode/tree/master/tf-2-workflow\n",
+    "- SageMaker Python SDK v2에서 변경된 용법을 반영하였으며, 최신 버전의 프레임워크에 대응하게 수정하였습니다\n",
+    "- 원본 소스 : https://github.com/aws-samples/amazon-sagemaker-script-mode/tree/master/tf-2-workflow\n",
     "\n",
     "### Data Preprocessing -> Code Prototyping -> Automatic Model Tuning -> Deployment\n",
     "\n",
@@ -62,6 +63,15 @@
     "\n",
     "raw_dir = os.path.join(os.getcwd(), 'data/raw')\n",
     "os.makedirs(raw_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sagemaker.__version__"
    ]
   },
   {
@@ -152,7 +162,6 @@
    "outputs": [],
    "source": [
     "%%writefile preprocessing.py\n",
-    "\n",
     "import glob\n",
     "import numpy as np\n",
     "import os\n",
@@ -216,7 +225,7 @@
     "from sagemaker import get_execution_role\n",
     "from sagemaker.sklearn.processing import SKLearnProcessor\n",
     "\n",
-    "sklearn_processor = SKLearnProcessor(framework_version='0.20.0',\n",
+    "sklearn_processor = SKLearnProcessor(framework_version='0.23-1',\n",
     "                                     role=get_execution_role(),\n",
     "                                     instance_type='ml.m5.xlarge',\n",
     "                                     instance_count=2)"
@@ -415,7 +424,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pygmentize train_model/train.py"
+    "%%writefile train_model/train.py\n",
+    "\n",
+    "import argparse\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "from model_def import get_model\n",
+    "\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
+    "\n",
+    "\n",
+    "def parse_args():\n",
+    "    \n",
+    "    parser = argparse.ArgumentParser()\n",
+    "\n",
+    "    # 사용자가 전달한 하이퍼 파라미터를 command-line argument로 전달받아 사용함\n",
+    "    parser.add_argument('--epochs', type=int, default=1)\n",
+    "    parser.add_argument('--batch_size', type=int, default=64)\n",
+    "    parser.add_argument('--learning_rate', type=float, default=0.1)\n",
+    "    \n",
+    "    # data directories\n",
+    "    parser.add_argument('--train', type=str, default=os.environ.get('SM_CHANNEL_TRAIN'))\n",
+    "    parser.add_argument('--test', type=str, default=os.environ.get('SM_CHANNEL_TEST'))\n",
+    "    \n",
+    "    # model directory: we will use the default set by SageMaker, /opt/ml/model\n",
+    "    parser.add_argument('--model_dir', type=str, default=os.environ.get('SM_MODEL_DIR'))\n",
+    "    \n",
+    "    return parser.parse_known_args()\n",
+    "\n",
+    "\n",
+    "def get_train_data(train_dir):\n",
+    "    \n",
+    "    x_train = np.load(os.path.join(train_dir, 'x_train.npy'))\n",
+    "    y_train = np.load(os.path.join(train_dir, 'y_train.npy'))\n",
+    "    print('x train', x_train.shape,'y train', y_train.shape)\n",
+    "\n",
+    "    return x_train, y_train\n",
+    "\n",
+    "\n",
+    "def get_test_data(test_dir):\n",
+    "    \n",
+    "    x_test = np.load(os.path.join(test_dir, 'x_test.npy'))\n",
+    "    y_test = np.load(os.path.join(test_dir, 'y_test.npy'))\n",
+    "    print('x test', x_test.shape,'y test', y_test.shape)\n",
+    "\n",
+    "    return x_test, y_test\n",
+    "   \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    # 환경변수 또는 사용자 지정 hyperparameter로 전달된 argument를 읽는다.\n",
+    "    args, _ = parse_args()\n",
+    "    \n",
+    "    # ------------------------------------------------------------------------------------------------\n",
+    "    # TO DO \n",
+    "    # training data를 가져온다. 위 코드에서 읽은 argument 중 'train'으로 전달된 값을 사용함. \n",
+    "    # parse_args()를 통해 환경변수 'SM_CHANNEL_TRAIN'로 전달된 경로 'opt/ml/input/train/'가 'arg.train'으로 지정됨\n",
+    "    # x_train, y_train = get_train_data(args.train)\n",
+    "    # x_test, y_test = get_test_data(args.test)\n",
+    "    \n",
+    "    x_train, y_train = <TO DO>\n",
+    "    x_test, y_test = <TO DO>\n",
+    "    \n",
+    "    # ------------------------------------------------------------------------------------------------\n",
+    "    \n",
+    "    device = '/cpu:0' \n",
+    "    print(device)\n",
+    "    batch_size = args.batch_size\n",
+    "    epochs = args.epochs\n",
+    "    learning_rate = args.learning_rate\n",
+    "    print('batch_size = {}, epochs = {}, learning rate = {}'.format(batch_size, epochs, learning_rate))\n",
+    "\n",
+    "    with tf.device(device):\n",
+    "        \n",
+    "        model = get_model()\n",
+    "        optimizer = tf.keras.optimizers.SGD(learning_rate)\n",
+    "        model.compile(optimizer=optimizer, loss='mse')    \n",
+    "        model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs,\n",
+    "                  validation_data=(x_test, y_test))\n",
+    "\n",
+    "        # evaluate on test set\n",
+    "        scores = model.evaluate(x_test, y_test, batch_size, verbose=2)\n",
+    "        print(\"\\nTest MSE :\", scores)\n",
+    "        \n",
+    "        # ------------------------------------------------------------------------------------------------\n",
+    "        # TO DO \n",
+    "        # 결과모델 저장 - 'args.model_dir'에는 'SM_MODEL_DIR' 환경변수를 통해 지정된 '/opt/ml/model/' 경로가 지정된다.\n",
+    "        # model.save(args.model_dir + '/1')\n",
+    "        \n",
+    "        model.save(<TO DO>)\n",
+    "        \n",
+    "        # ------------------------------------------------------------------------------------------------\n",
+    "        "
    ]
   },
   {
@@ -436,13 +538,13 @@
     "                             source_dir='tf-2-workflow/train_model',\n",
     "                             entry_point='train.py',\n",
     "                             model_dir=model_dir,\n",
-    "                             train_instance_type=train_instance_type,\n",
-    "                             train_instance_count=1,\n",
+    "                             instance_type=train_instance_type,\n",
+    "                             instance_count=1,\n",
     "                             hyperparameters=hyperparameters,\n",
     "                             role=sagemaker.get_execution_role(),\n",
     "                             base_job_name='tf-2-workflow',\n",
-    "                             framework_version='2.1',\n",
-    "                             py_version='py3',\n",
+    "                             framework_version='2.3',\n",
+    "                             py_version='py37',\n",
     "                             script_mode=True)"
    ]
   },
@@ -544,6 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "local_predictor = local_estimator.deploy(initial_instance_count=1, instance_type='local')"
    ]
   },
@@ -583,6 +686,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -598,6 +710,15 @@
    "outputs": [],
    "source": [
     "local_predictor.delete_endpoint()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
    ]
   },
   {
@@ -657,13 +778,13 @@
     "                       source_dir='tf-2-workflow/train_model',\n",
     "                       entry_point='train.py',\n",
     "                       model_dir=model_dir,\n",
-    "                       train_instance_type=train_instance_type,\n",
-    "                       train_instance_count=1,\n",
+    "                       instance_type=train_instance_type,\n",
+    "                       instance_count=1,\n",
     "                       hyperparameters=hyperparameters,\n",
     "                       role=sagemaker.get_execution_role(),\n",
     "                       base_job_name='tf-2-workflow',\n",
-    "                       framework_version='2.1',\n",
-    "                       py_version='py3',\n",
+    "                       framework_version='2.3.0',\n",
+    "                       py_version='py37',\n",
     "                       script_mode=True)"
    ]
   },
@@ -680,6 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "estimator.fit(inputs)"
    ]
   },
@@ -835,6 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "tuning_predictor = tuner.deploy(initial_instance_count=1, instance_type='ml.m5.xlarge')"
    ]
   },
@@ -1238,13 +1361,6 @@
     "    \n",
     "지금까지 살펴본 기능 외에도, SageMaker에는 여러분의 프로젝트에 적용 가능한 다른 많은 기능들이 있습니다. 예를 들어 딥러닝 모델의 학습시 발생하는 공통적인 문제들을 다루기 위해 제공되는 **SageMaker 디버거(Debugger)** 기능이 있으며 모델이 운영환경에 적용되었을 때 발생하는 공통적인 문제들을 관리하기 위한 **SageMaker Model Monitor** 와 같은 기능들이 유용할 수 있습니다.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
